# music

./: Cargo.toml  LICENSE  play_example
examples/: banjo.rs  driven_strings.rs  more_structure.rs  non_functional_fill.rs  plucked_strings.rs  sin.rs  space.rs  structure.rs
src/: lib.rs
src/composition/: mod.rs
src/effect/: mod.rs
src/envelope/: mod.rs
src/filter/: mod.rs
src/note/: mod.rs
src/oscillator/: mod.rs  sampler.rs  string.rs
src/sequence/: mod.rs
src/value/: mod.rs  multisample.rs  operators.rs
