[package]
name = "music"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

[lib]
name = "music"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
lazy_static = "1.3.0"
rand = "0.6.5"
regex = "1"
itertools = "0.8"

[dev-dependencies]
byteorder = "1"
rand_chacha = "0.1.1"
